kestra-openshift-deployment/kestra-patched-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kestra-standalone
  namespace: ryan-nix-dev
  labels:
    app.kubernetes.io/name: kestra
    app.kubernetes.io/component: standalone
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: kestra
      app.kubernetes.io/component: standalone
  template:
    metadata:
      labels:
        app.kubernetes.io/name: kestra
        app.kubernetes.io/component: standalone
    spec:
      containers:
      - name: kestra-standalone
        image: kestra/kestra:v0.22.2
        command:
        - sh
        - -c
        - exec /app/kestra server standalone
        ports:
        - containerPort: 8080
        - containerPort: 8081
        securityContext:
          privileged: false
