kestra-openshift-deployment/kestra-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: kestra
  namespace: your-ocp-namespace
spec:
  to:
    kind: Service
    name: kestra-service
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
